初始化 宏观

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,8 @@
 <body>
 
   <a ui-sref="microIndustryChain">前往 micro industry chain view</a>
-  <a>前往 macro industry display</a>
-
+  <a ui-sref="macroIndustryDisplay">前往 macro industry display</a>
+  <a ui-sref="login">登录</a>
 
   <ui-view></ui-view>
 
@@ -48,5 +48,9 @@
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
   <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
 
+  <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
+  <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
+
+  <script src="view/login/login.js"></script>
 </body>
 </html>
