基本情况界面 导航栏及定位

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
 
+  <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
+
   <script src="app.js"></script>
 
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
