全景图的响应效果 企业基本信息的表格

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
 
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
+  <script src="view/macroIndustryDisplay/companyDetails/companyDetails.js"></script>
 
   <script src="view/login/login.js"></script>
 </body>
