--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
   <script src="components/version/interpolate-filter.js"></script>
 
   <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
-
+  <script src="bower_components/echarts/dist/echarts.js"></script>
   <script src="app.js"></script>
 
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
@@ -52,7 +52,7 @@
 
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
-
+  <script src="view/macroIndustryDisplay/industryData/sellNum/sellNum.js"></script>
   <script src="view/login/login.js"></script>
 </body>
 </html>
