行业指标-整车销量-乘用车分品牌销量test

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,13 @@
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
   <script src="view/macroIndustryDisplay/industryData/sellNum/sellNum.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/holdNum/holdNum.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/capacity/capacity.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/price/price.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/inventory/inventory.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/registerNum/registerNum.js"></script>
+
+
   <script src="view/login/login.js"></script>
 </body>
 </html>
