模糊查询 改进

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
 
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
   <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
+  <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
