增加登录页面

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,7 @@
 
 
 <body>
-  <a ui-sref="microIndustryChain">前往 micro industry chain view</a>
-  <a ui-sref="macroIndustryDisplay">前往 macro industry display</a>
-  <a ui-sref="login">登录</a>
+
 
   <ui-view></ui-view>
 
@@ -47,13 +45,14 @@
 
   <script src="app.js"></script>
 
+  <script src="view/login/login.js"></script>
+  <script src="view/home/home.js"></script>
+
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
   <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
   <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
-
-  <script src="view/login/login.js"></script>
 </body>
 </html>
