--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
   <script src="view/home/home.js"></script>
 
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
+  <script src="view/microIndustryChain/discoverChainView/discoverChainView.js"></script>
+  <script src="view/microIndustryChain/mineChainView/mineChainView.js"></script>
   <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
   <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 
