行业地位(部分

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,9 @@
   <script src="view/macroIndustryDisplay/economicData/qyjx/qyjx.js"></script>
   <script src="view/macroIndustryDisplay/economicData/hysxysj/hysxysj.js"></script>
   <script src="view/macroIndustryDisplay/economicData/hycw/hycw.js"></script>
+  <script src="view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.js"></script>
+  <script src="view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.js"></script>
+  <script src="view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.js"></script>
 
 
   <script src="view/login/login.js"></script>
