--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
   <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
   <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
   <script src="view/macroIndustryDisplay/companyDetails/companyDetails.js"></script>
+  <script src="view/macroIndustryDisplay/industryData/industryData.js"></script>
   <script src="view/macroIndustryDisplay/industryData/sellNum/sellNum.js"></script>
   <script src="view/macroIndustryDisplay/industryData/holdNum/holdNum.js"></script>
   <script src="view/macroIndustryDisplay/industryData/capacity/capacity.js"></script>
