add personal、add getGraphByID

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,10 @@
   <script src="app.js"></script>
 
   <script src="view/login/login.js"></script>
+
   <script src="view/home/home.js"></script>
+
+  <script src="view/personal/personal.js"></script>
 
   <script src="view/microIndustryChain/microIndustryChain.js"></script>
   <script src="view/microIndustryChain/discoverChainView/discoverChainView.js"></script>
