--- a/app/index.html
+++ b/app/index.html
@@ -1,82 +1,92 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="app.css">
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My AngularJS App</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
+    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css" type="text/css"
+          media="all"/>
+    <link rel="stylesheet" href="app.css">
+    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 
 
 <body>
 
 
-  <ui-view></ui-view>
+<ui-view></ui-view>
 
 
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+<!-- In production use:
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+-->
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="personal_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+<script src="components/version/version.js"></script>
+<script src="components/version/version-directive.js"></script>
+<script src="components/version/interpolate-filter.js"></script>
+
+<script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
+<script src="bower_components/echarts/dist/echarts.js"></script>
+<script src="app.js"></script>
+<script src="js/echarts.min.js"></script>
+<script src="js/worldcloud.js"></script>
+<script src="js/ui-bootstrap-tpls-2.0.0.js"></script>
 
 
-  <!--[if lt IE 7]>
-  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="personal_components/angular-animate/angular-animate.min.js"></script>
-  <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+<script src="view/login/login.js"></script>
 
-  <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
-  <script src="bower_components/echarts/dist/echarts.js"></script>
-  <script src="app.js"></script>
+<script src="view/home/home.js"></script>
 
-  <script src="view/login/login.js"></script>
+<script src="view/personal/personal.js"></script>
 
-  <script src="view/home/home.js"></script>
-
-  <script src="view/personal/personal.js"></script>
-
-  <script src="view/microIndustryChain/microIndustryChain.js"></script>
-  <script src="view/microIndustryChain/discoverChainView/discoverChainView.js"></script>
-  <script src="view/microIndustryChain/mineChainView/mineChainView.js"></script>
-  <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
-  <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
-
-  <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
-  <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
-  <script src="view/macroIndustryDisplay/companyDetails/companyDetails.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/industryData.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/sellNum/sellNum.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/holdNum/holdNum.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/capacity/capacity.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/price/price.js"></script>
-  <script src="view/macroIndustryDisplay/industryData/inventory/inventory.js"></script>
-  <script src="view/macroIndustryDisplay/economicData/economicData.js"></script>
-  <script src="view/macroIndustryDisplay/economicData/qyjx/qyjx.js"></script>
-  <script src="view/macroIndustryDisplay/economicData/hysxysj/hysxysj.js"></script>
-  <script src="view/macroIndustryDisplay/economicData/hycw/hycw.js"></script>
-  <script src="view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.js"></script>
-  <script src="view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.js"></script>
-  <script src="view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.js"></script>
+<script src="view/microIndustryChain/microIndustryChain.js"></script>
+<script src="view/microIndustryChain/discoverChainView/discoverChainView.js"></script>
+<script src="view/microIndustryChain/mineChainView/mineChainView.js"></script>
+<script src="view/microIndustryChain/createChainView/createChainView.js"></script>
+<script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
+<script src="view/microIndustryChain/publicOpinion/publicOpinion.js"></script>
 
 
-  <script src="view/login/login.js"></script>
+<script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
+<script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
+<script src="view/macroIndustryDisplay/companyDetails/companyDetails.js"></script>
+<script src="view/macroIndustryDisplay/industryData/industryData.js"></script>
+<script src="view/macroIndustryDisplay/industryData/sellNum/sellNum.js"></script>
+<script src="view/macroIndustryDisplay/industryData/holdNum/holdNum.js"></script>
+<script src="view/macroIndustryDisplay/industryData/capacity/capacity.js"></script>
+<script src="view/macroIndustryDisplay/industryData/price/price.js"></script>
+<script src="view/macroIndustryDisplay/industryData/inventory/inventory.js"></script>
+<script src="view/macroIndustryDisplay/economicData/economicData.js"></script>
+<script src="view/macroIndustryDisplay/economicData/qyjx/qyjx.js"></script>
+<script src="view/macroIndustryDisplay/economicData/hysxysj/hysxysj.js"></script>
+<script src="view/macroIndustryDisplay/economicData/hycw/hycw.js"></script>
+<script src="view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.js"></script>
+<script src="view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.js"></script>
+<script src="view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.js"></script>
+
+
+<script src="view/login/login.js"></script>
 </body>
 </html>
