主要上市公司initial

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,11 @@
 <script src="view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.js"></script>
 <script src="view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.js"></script>
 <script src="view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.js"></script>
+<script src="view/macroIndustryDisplay/mainQuotedCompany/cwbl/cwbl.js"></script>
+<script src="view/macroIndustryDisplay/mainQuotedCompany/cwsj/cwsj.js"></script>
+<script src="view/macroIndustryDisplay/mainQuotedCompany/gzbx/gzbx.js"></script>
+<script src="view/macroIndustryDisplay/mainQuotedCompany/scbx/scbx.js"></script>
+<script src="view/macroIndustryDisplay/mainQuotedCompany/ylyc/ylyc.js"></script>
 
 
 <script src="view/login/login.js"></script>
