行业入口，每个卡

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 <script src="view/microIndustryChain/publicOpinion/publicOpinion.js"></script>
 
-
+<script src="view/macroIndustryDisplay/macroIndustryList.js"></script>
 <script src="view/macroIndustryDisplay/macroIndustryDisplay.js"></script>
 <script src="view/macroIndustryDisplay/generalInfo/generalInfo.js"></script>
 <script src="view/macroIndustryDisplay/companyDetails/companyDetails.js"></script>
