pe分析（除pe走势图（未接后端

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
 <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/analysis.js"></script>
+<script src="view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.js"></script>
 <script src="view/industryFactorAnalyze/industryFactorAnalyze.js"></script>
 
 <script src="view/macroIndustryDisplay/macroIndustryList.js"></script>
