--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,8 @@
 <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
 <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
 <script src="view/microIndustryChain/publicOpinion/publicOpinion.js"></script>
+<script src="view/microIndustryChain/articleView/articleView.js"></script>
+<script src="view/microIndustryChain/writeArticle/writeArticle.js"></script>
 <script src="view/industryFactorAnalyze/industryFactorAnalyze.js"></script>
 
 <script src="view/macroIndustryDisplay/macroIndustryList.js"></script>
