--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
 <script src="view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/analysis.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.js"></script>
+<script src="view/microIndustryChain/microChainAnalysis/financialContrast/financialContrast.js"></script>
 <script src="view/industryFactorAnalyze/industryFactorAnalyze.js"></script>
 
 <script src="view/macroIndustryDisplay/macroIndustryList.js"></script>
