--- a/app/index.html
+++ b/app/index.html
@@ -60,14 +60,15 @@
 <script src="view/home/home.js"></script>
 
 <script src="view/personal/personal.js"></script>
+<script src="view/personal/personalMain.js"></script>
 
 <script src="view/microIndustryChain/microIndustryChain.js"></script>
 <script src="view/microIndustryChain/discoverChainView/discoverChainView.js"></script>
 <script src="view/microIndustryChain/mineChainView/mineChainView.js"></script>
 <script src="view/microIndustryChain/createChainView/createChainView.js"></script>
 <script src="view/microIndustryChain/previewChainView/previewChainView.js"></script>
-<script src="view/microIndustryChain/articleView/articleView.js"></script>
-<script src="view/microIndustryChain/writeArticle/writeArticle.js"></script>
+<!--<script src="view/microIndustryChain/articleView/articleView.js"></script>-->
+<!--<script src="view/microIndustryChain/writeArticle/writeArticle.js"></script>-->
 <script src="view/microIndustryChain/microChainAnalysis/publicOpinion/publicOpinion.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/analysis.js"></script>
 <script src="view/microIndustryChain/microChainAnalysis/peAnalysis/peAnalysis.js"></script>
