行业因子分析部分chart

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,10 @@
 
 <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
 <script src="bower_components/echarts/dist/echarts.js"></script>
+<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
+
 <script src="app.js"></script>
-<script src="js/echarts.min.js"></script>
+<!--<script src="js/echarts.min.js"></script>-->
 <script src="js/worldcloud.js"></script>
 <script src="js/ui-bootstrap-tpls-2.0.0.js"></script>
 
