修改部分js引用为min.js，宏观部分更换图片路径

--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
 
-<script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
-<script src="bower_components/echarts/dist/echarts.js"></script>
+<script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.min.js"></script>
+<script src="bower_components/echarts/dist/echarts.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
 
 <script src="app.js"></script>
